Added Link Delink API logic and removed selectVoucher method.
