# src/main/resources/swagger/api.yml
@@ -885,20 +885,19 @@ components:
       required:
         - productId
     LinkDelinkResponse:
-      type: array
-      items:
-        $ref: '#/components/schemas/LinkDelinkResponseObject'
-    LinkDelinkResponseObject:
       type: object
       properties:
         campaignId:
           type: string
           description: The unique campaign id
         numAdded:
-          type: number
-          description: The unique name of the campaign
+          type: integer
+          format: int32
+          description: The number if products linked
         numDeleted:
-          type: number
+          type: integer
+          format: int32
+          description: The number if products delinked
     QuantitesResponse:
       type: array
       items:
